Переименование и обноÐДоработки по ревью

--- a/src/main/resources/static/admin.html
+++ b/src/main/resources/static/admin.html
@@ -99,84 +99,82 @@
                                             aria-label="Закрыть"></button>
                                 </div>
                                 <div class="modal-body">
+
                                     <form id="updateForm">
                                         <!-- Поле для ID пользователя -->
                                         <input type="hidden" id="editUserId" name="id"/>
 
                                         <div class="mb-3">
                                             <label for="username" class="form-label">Имя</label>
-                                            <input id="username" type="text" class="form-control"
-                                                   name="editUserModal_name" required>
+                                            <input id="username" type="text" class="form-control" name="editUserModal_name" required>
                                         </div>
 
                                         <div class="mb-3">
                                             <label for="userEmail" class="form-label">Email</label>
-                                            <input id="userEmail" type="email" class="form-control"
-                                                   name="editUserModal_userEmail" required>
+                                            <input id="userEmail" type="email" class="form-control" name="editUserModal_userEmail" required>
                                         </div>
 
                                         <div class="mb-3">
                                             <label for="userSurname" class="form-label">Фамилия</label>
-                                            <input id="userSurname" type="text" class="form-control"
-                                                   name="editUserModal_userSurname" required>
+                                            <input id="userSurname" type="text" class="form-control" name="editUserModal_userSurname" required>
                                         </div>
 
                                         <div class="mb-3">
                                             <label for="age" class="form-label">Возраст</label>
-                                            <input type="number" class="form-control" id="age"
-                                                   name="editUserModal_age" required>
+                                            <input type="number" class="form-control" id="age" name="editUserModal_age" required>
                                         </div>
 
-                                        <label for="password">Новый пароль: </label>
-                                        <input id="password" type="text" class="form-control"
-                                               name="editUserModal_password" required>
+                                        <label for="password">Новый пароль (если нужно изменить): </label>
+                                        <input id="password" type="text" class="form-control" name="editUserModal_password">
+
                                         <br>
 
                                         <div class="mb-3">
-                                            <label for="editRoles">Назначить роли: </label>
-                                            <select id="editRoles" name="editRoles" class="form-select" multiple>
-                                                <!-- Здесь будут загружены роли -->
-                                            </select>
+                                            <label>Назначить роли:</label><br>
+                                            <div>
+                                                <input type="checkbox" name="roles" value="1"> ADMIN<br>
+                                                <input type="checkbox" name="roles" value="2"> USER<br>
+                                                <!-- Добавьте остальные роли здесь -->
+                                            </div>
                                         </div>
-                                        <button type="submit" class="btn btn-primary">Сохранить
-                                            изменения
-                                        </button>
+
+                                        <button type="submit" class="btn btn-primary">Сохранить изменения</button>
                                     </form>
                                 </div>
                             </div>
                         </div>
                     </div>
 
-
                     <!-- Вкладка "Добавить пользователя" -->
                     <div class="tab-pane fade" id="createForm" role="tabpanel" aria-labelledby="new-user-tab">
                         <form id="createUserForm" class="mt-3">
                             <div class="mb-3">
-                                <label for="name" class="form-label">Введите имя</label>
-                                <input type="text" class="form-control" name="createForm_name" id="name" required>
+                                <label for="username_create" class="form-label">Введите имя</label>
+                                <input type="text" class="form-control" name="username" id="username_create" required>
                             </div>
                             <div class="mb-3">
                                 <label for="mail" class="form-label">E-mail</label>
-                                <input type="email" class="form-control" name="createForm_email" id="mail" required>
+                                <input type="email" class="form-control" name="userEmail" id="mail" required>
                             </div>
                             <div class="mb-3">
                                 <label for="userAge" class="form-label">Введите возраст</label>
-                                <input type="number" class="form-control" name="createForm_age" id="userAge" required>
+                                <input type="number" class="form-control" name="age" id="userAge" required>
                             </div>
                             <div class="mb-3">
                                 <label for="surname" class="form-label">Введите фамилию</label>
-                                <input type="text" class="form-control" name="createForm_surname" id="surname" required>
+                                <input type="text" class="form-control" name="userSurname" id="surname" required>
                             </div>
                             <div class="mb-3">
                                 <label for="userPassword" class="form-label">Введите пароль</label>
-                                <input type="password" class="form-control" name="createForm_password" id="userPassword"
-                                       required>
+                                <input type="password" class="form-control" name="password" id="userPassword" required>
                             </div>
                             <div class="mb-3">
-                                <label for="setRoles">Назначить роли: </label>
-                                <select id="setRoles" name="setRoles" class="form-select" multiple>
-                                    <!-- Роли будут загружены сюда через JavaScript -->
-                                </select>
+                                <label>Назначить роли:</label><br>
+                                <div>
+                                    <input type="checkbox" name="roles" value="1"> ADMIN<br>
+                                    <input type="checkbox" name="roles" value="2"> USER<br>
+                                    <!-- Добавьте остальные роли здесь -->
+                                </div>
                             </div>
                             <button type="submit" class="btn btn-success">Создать пользователя</button>
                         </form>
