Убрал @RequestParam и перенёс всю бизнес логику в сервисный слой

--- a/src/main/resources/static/admin.html
+++ b/src/main/resources/static/admin.html
@@ -137,8 +137,8 @@
                                         <div class="mb-3">
                                             <label>Назначить роли:</label><br>
                                             <div>
-                                                <input type="checkbox" name="roles" value="1">ADMIN<br>
-                                                <input type="checkbox" name="roles" value="2">USER<br>
+                                                <input type="checkbox" name="updateRoles" value="1">ADMIN<br>
+                                                <input type="checkbox" name="updateRoles" value="2">USER<br>
                                             </div>
                                         </div>
 
